Bug 138024 - Default Icons not refreshing in template manger's search view
Summary: Default Icons not refreshing in template manger's search view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium minor
Assignee: VertD
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-06 00:51 UTC by VertD
Modified: 2020-11-16 08:18 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description VertD 2020-11-06 00:51:00 UTC
Description:
Default Icons not refreshing in template manger's search view. Refresh does nothing in searchview.

Steps to Reproduce:
1.Open the Template manager
2.Search "a"
3.select a template -> right click -> set as default
4.select another template -> set as default
5.refresh


Actual Results:
Default icons are not removed when setting or resetting a template as default, context menu displays the wrong option and refresh doesn't update the icons.

Expected Results:
Old default icons are removed


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 2 Commit Notification 2020-11-16 08:18:04 UTC
Vert D committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76836910aedee94c1361ddd912544822316b9e0c

tdf#138024 Default Icons not refreshing in template manger search view

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.