tdf#138024 Default Icons not refreshing in template manger search view

*added missing funtion to searchview
*call searchupdate when refreshing

Change-Id: I576b2e2de37e3f34b7499a914f0707586687643e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105387
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>